--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,3 +1,4 @@
+  
 .custom-button {
   min-width: 165px;
   width: auto;
@@ -20,8 +21,16 @@
     border: 1px solid black;
   }
 
-}
+  &.google-sign-in {
+    background-color: #4285f4;
+    color: white;
 
+    &:hover {
+      background-color: #357ae8;
+      border: none;
+    }
+  }
+}
 .google{
    min-width: 165px;
   width: auto;
